# Infectorpp2

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTE.md  Errors_MakeAll.txt  LICENSE.md  README.md  TestsResult.txt  appveyor.yml  infector.txt  todo.txt  travis.yml
IDEs/CodeBlocks/: Infectorpp.cbp  Infectorpp.layout
cmake/: AddLibraryType.cmake  AddUnityObjectLibrary.cmake  EnableCpp11.cmake  GenerateTestDriver.cmake  OutOfSourceBuild.cmake  SuperStrictWarnings.cmake
include/Infectorpp/: InfectorContainer.hpp  InfectorContext.hpp  InfectorExport.hpp  InfectorPointers.hpp  InfectorTraits.hpp
include/Infectorpp/priv/: ConcreteContainer.cpp  ConcreteContainer.hpp  ConcreteContext.cpp  ConcreteContext.hpp  DependencyDAG.cpp  DependencyDAG.hpp  ExceptionHandling.hpp  GenericBinding.hpp  InfectorAbstractContainer.hpp  InfectorAbstractContext.hpp  InfectorBinding.hpp  InfectorBindingFactory.cpp  InfectorBindingFactory.hpp  InfectorConcreteBinding.cpp  InfectorConcreteBinding.hpp  InfectorConcreteContainer.cpp  InfectorConcreteContainer.hpp  InfectorConcreteDowncastBinding.cpp  InfectorConcreteDowncastBinding.hpp  InfectorContainer.hpp  InfectorContainerFactory.cpp  InfectorContainerFactory.hpp  InfectorDowncastBinding.hpp  InfectorDowncastBindingFactory.cpp  InfectorDowncastBindingFactory.hpp  InfectorTypes.hpp  InstanceTableEntry.hpp  LogCriticalError.cpp
slides/: rationale.txt
tests/: CMakeLists.txt  TestHelper.hpp  TestHelpers.hpp  bindSingleAsThree.cpp  bind_profile.cpp  catch.cxx  depGraph.cpp  differentComponentPerRequest.cpp  differentComponentSelfPerRequest.cpp  inheritDependencyOnce.cpp  mockSharedPtr.cpp  mockUniquePtr.cpp  recursiveInOneContainer.cpp  recursiveInTwoContainers.cpp  registerInstance.cpp  sameSharedInstancePerRequest.cpp  sameSharedSelfInstancePerRequest.cpp  selfRecursive.cpp  selfRecursiveAbstract.cpp  sharedBindingOverrided.cpp  uniqueBindingOverrided.cpp
testsDLL/: CMakeLists.txt  depGraph.cpp  recursiveInOneContainer.cpp
